--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,6 @@
             <version>5.9.2</version>
         </dependency>
 
-
-
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -36,15 +33,16 @@
             <version>5.6.3</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.10.0</version>
+            <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
 
