--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,26 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- Apache POI Core -->
+       <!-- <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.0</version>
+        </dependency>-->
+
+        <!-- Apache POI OOXML (for .xlsx files) -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <!-- Log4j (required by Apache POI) -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
     </dependencies>
 </project>
